--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "hh-localstorage",
   "version": "1.0.0",
-  "description": "\"\"\u001b[DlocalStorag\"\u001b[De工具\"",
+  "description": "localStorag工具",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "\"\"\u001b[D\u0016https://github.com/hongsusu/hhlocalStorage\""
+    "url": "git+https://github.com/hongsusu/hhlocalStorage"
   },
   "keywords": [
-    "\"\"\u001b[DlocalStorage\""
+    "localStorage",
+    "hh-localstorage"
   ],
   "author": "hongsusu",
-  "license": "ISC"
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hongsusu/hhlocalStorage/issues"
+  },
+  "homepage": "https://github.com/hongsusu/hhlocalStorage"
 }
